crates/plotnik-tests/tests/04-emit/bytecode/binding/shared_def_non_deferred_use.txt
Bad = arguments: (identifier)

Q = (binary_expression
  [
    (Bad)
    (identifier)
  ]
  (Bad)
)
------------------ DIAGNOSTICS -------------------
error: grammar field `arguments` is not valid on this node kind
 --> query.ptk:1:7
  |
1 | Bad = arguments: (identifier)
  |       ^^^^^^^^^
2 |
3 | Q = (binary_expression
  |      ----------------- on `binary_expression`
  |
help: valid grammar fields for `binary_expression`: `left`, `operator`, `right`
